<resources>
    <string name="app_name">DonationTracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">Contacts permissions are
        needed for providing email completions.
    </string>
    <string name="loginErrorM">Invalid email/password</string>
    <string name="registerErrorM">Email and password are required.</string>
    <string name="registerExistingUserErrorM">User already exists.</string>
    <string name="action_settings">Setting</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="logo">Logo</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="title_activity_read_location">ReadLocation</string>
    <string name="title_activity_maps">Map</string>
    <string name="backButton" translatable="false">&lt;</string>

    <!-- Strings related to Donation -->
    <string name="add_donation">Add Donation</string>
    <string name="name_donation">Name</string>
    <string name="timestamp_donation">Time Stamp</string>
    <string name="tabletimestamp_donation">Time Stamp: </string>
    <string name="location_donation">Location</string>
    <string name="tableloc_donation">Location: </string>
    <string name="shortdescription_donation">Short Description</string>
    <string name="fulldescription_donation">Full Description</string>
    <string name="value_donation">Value (in dollars)</string>
    <string name="tableval_donation">Value: </string>
    <string name="category_donation">Category</string>
    <string name="tablecategory_donation">Category: </string>
    <string name="comments_donation">Comments (Optional)</string>
    <string name="tablecomments_donation">Comments</string>
    <string name="image_donation">Picture (Optional)</string>
    <string name="uploadimage_donation">Upload Image</string>
    <string name="addingit_donation">Add Donation</string>
    <string name="map_view">Map View</string>
    <string name="stat">Statistics</string>
    <string name="search_donation">Search For Donation</string>
    <string name="addDonationErrorM">All fields except Comments must be filled in.</string>
    <!-- Strings related to Location -->
    <string name="view_location">Read Locations</string>
    <string name="manage">Manage Accounts</string>
    <string name="location_colon">Location : </string>
    <string name="adding_location">Add A Location</string>
    <string name="phonenumber_location">Phone Number</string>
    <string name="streetaddress_location">Street Address</string>
    <string name="city_location">City</string>
    <string name="zipcode_location">Zip Code</string>
    <string name="lat_location">Latitude</string>
    <string name="long_location">Longitude</string>
    <string name="latlong_location">Latitude/Longitude</string>
    <string name="website_location">Website</string>
    <string name="locationname_location">Location Name</string>
    <string name="type_location">Type</string>
    <string name="search_at_location">Search for Donation at this Location</string>
    <string name="filterlat_location">Location Latitude and Longitude</string>
    <string name="searchlat_location">Sort By Latitude</string>
    <string name="searchlong_location">Sort By Longitude</string>
    <string name="searchalpha_location">Sort Alphabetically</string>
    <string name="locationtype_location">Location Type</string>
    <string name="searchdrop_location">Show if Drop-Off</string>
    <string name="searchstore_location">Show if Store</string>
    <string name="searchware_location">Show if Warehouse</string>
    <string name="searchnum_location">Sort Numerically</string>
    <string name="searcharea_location">Sort By Area Code</string>
    <string name="searchclose_location">Sort By Closeness</string>
    <string name="locationaddress_location">Location Address</string>
    <string name="locationphone_location">Location Phone Number</string>
    <string name="addLocationErrorM">All fields must be filled in.</string>

    <string name="registerhere">Register Here</string>
    <string name="registertype">Account Type</string>
    <string name="skip">Skip</string>
    <string name="search">Search</string>
    <string name="info_location">Location Information</string>
    <string name="header">Header is ::</string>
    <string name="clicked">Clicked on ::</string>
    <string name="selected_nodonations">Selected filter does not have donations.</string>
    <string name="clothing_donation">Clothing</string>
    <string name="hat_donation">Hat</string>
    <string name="kitchen_donation">Kitchenware</string>
    <string name="tech_donation">Electronics</string>
    <string name="household_donation">Household Items</string>
    <string name="other_donation">Other</string>
    <string name="all_donation">All</string>

</resources>
